--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
     "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "octokit": "^2.0.10",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +42,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
