--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,8 @@ services:
       LANG: C.UTF-8
     ports:
       - ${MYSQL_PORT}:3306
+  redis:
+    image: 'redis:6-alpine'
+    container_name: redis
+    ports:
+      - ${REDIS_PORT}:6379
