--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "firebase-admin": "^11.5.0",
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.9.1",
