Fix: import case sensitivity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,7 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": ".",
-    "paths": {
-      "@/components/*": ["src/components/*"]
-    },
+    "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
